feat: add mobile machine management
